<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" tools:ignore="MissingTranslation">none</string>
    <string name="fabricapikey" tools:ignore="MissingTranslation">none</string>
    <string name="gapi" tools:ignore="MissingTranslation">none</string>
    <string name="tw_key" tools:ignore="MissingTranslation">none</string>
    <string name="tw_secret" tools:ignore="MissingTranslation">none</string>
    <string name="app_name" tools:ignore="MissingTranslation">Reporta</string>
    <string name="reporta" tools:ignore="MissingTranslation">Reporta</string>
    <string name="powered_by" tools:ignore="MissingTranslation">Powered by</string>
    <string name="iwmf" tools:ignore="MissingTranslation">International Women’s Media Foundation</string>
    <string name="select_your_language" tools:ignore="MissingTranslation">Select your language</string>
    <string name="lng_english" tools:ignore="MissingTranslation">English</string>
    <string name="lng_spanish" tools:ignore="MissingTranslation">Español</string>
    <string name="lng_french" tools:ignore="MissingTranslation">Français</string>
    <string name="lng_turkish" tools:ignore="MissingTranslation">Türkçe</string>
    <string name="lng_arabic" tools:ignore="MissingTranslation">العربية</string>
    <string name="lng_hebrew" tools:ignore="MissingTranslation">עברית</string>
    <string name="plus" tools:ignore="MissingTranslation">+</string>
    <string name="alerts" tools:ignore="MissingTranslation">Alerts</string>
    <string name="i_am_facing" tools:ignore="MissingTranslation">I am reporting</string>
    <string name="describe_situation" tools:ignore="MissingTranslation">Describe your situation</string>
    <string name="enter_location" tools:ignore="MissingTranslation">Enter your location</string>
    <string name="edit" tools:ignore="MissingTranslation">Edit</string>
    <string name="private_circle_default" tools:ignore="MissingTranslation">Private Circle (default)</string>
    <string name="private_circle_name" tools:ignore="MissingTranslation">Private Circle</string>
    <string name="public_circle" tools:ignore="MissingTranslation">Public Circles</string>
    <string name="social_circle" tools:ignore="MissingTranslation">Social Circles</string>
    <string name="optional" tools:ignore="MissingTranslation">Optional</string>
    <string name="add_photo_video_audio" tools:ignore="MissingTranslation">Add photo, video, or audio</string>
    <string name="send_alert" tools:ignore="MissingTranslation">Send Alert</string>
    <string name="saved_circles" tools:ignore="MissingTranslation">Saved Circles</string>
    <string name="search_contact" tools:ignore="MissingTranslation">Search</string>
    <string name="create_a_list" tools:ignore="MissingTranslation">Create a Circle</string>
    <string name="choose_valid_situation" tools:ignore="MissingTranslation">Please Select a Situation</string>
    <string name="enter_valid_description" tools:ignore="MissingTranslation">Please Enter a Description</string>
    <string name="enter_valid_contact" tools:ignore="MissingTranslation">Please Enter a Contact</string>
    <string name="choose_valid_location" tools:ignore="MissingTranslation">Please Confirm Your Location</string>
    <string name="please_describe" tools:ignore="MissingTranslation">Please describe</string>
    <string name="select_language" tools:ignore="MissingTranslation">Select language</string>
    <string name="info_alerts" tools:ignore="MissingTranslation">ALERTS\n\nThe Alert function allows you to send information about a situation you or a fellow journalist is facing to designated contact Circles. You may use a drop down menu describing possible incidents; you may also choose to enter additional information. A location must be selected either using geolocation or entered manually.\n\nAlerts are sent without delay and with the option to add media files.\n\nAlerts can be customized to share with different Circles.</string>
    <string name="alert_sent_successfully" tools:ignore="MissingTranslation">Your Alert Was Sent</string>
    <string name="info_profile" tools:ignore="MissingTranslation">PROFILE\n\nAll users of Reporta must create a profile. Your profile contains important information that is necessary to make Reporta work as intended.\n\nIWMF is committed to respecting your privacy and the management of Reporta follows generally accepted security practices and procedures to protect the Personally Identifiable Information you provide from unauthorized access, use and disclosure. We require our authorized service providers to implement and maintain such security practices and procedures as well. Nevertheless, be aware that Internet transmissions are never completely private or secure.\n\nFor more information, please review Reporta\'s Terms of Use and Privacy Policy.</string>
    <string name="profile" tools:ignore="MissingTranslation">Profile</string>
    <string name="signout_head" tools:ignore="MissingTranslation">Sign out?</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="signout" tools:ignore="MissingTranslation">Sign out</string>
    <string name="version" tools:ignore="MissingTranslation">Version</string>
    <string name="legal" tools:ignore="MissingTranslation">Legal</string>
    <string name="enternewpassword" tools:ignore="MissingTranslation">Enter new password</string>
    <string name="enterpassword" tools:ignore="MissingTranslation">Enter password</string>
    <string name="invalid_password" tools:ignore="MissingTranslation">Invalid Password</string>
    <string name="selectjobtitle" tools:ignore="MissingTranslation">Select job title</string>
    <string name="selectcountryorigin" tools:ignore="MissingTranslation">Country of origin</string>
    <string name="selectcountryworking" tools:ignore="MissingTranslation">Country where working</string>
    <string name="invalid_firstname" tools:ignore="MissingTranslation">Please Enter Your First Name</string>
    <string name="invalid_lastname" tools:ignore="MissingTranslation">Please Enter Your Last Name</string>
    <string name="invalid_phone" tools:ignore="MissingTranslation">Please Enter a Valid Phone Number</string>
    <string name="password_notmatch" tools:ignore="MissingTranslation">Passwords Don\'t Match</string>
    <string name="firstname" tools:ignore="MissingTranslation">First name</string>
    <string name="try_again" tools:ignore="MissingTranslation">Try Again</string>
    <string name="lastname" tools:ignore="MissingTranslation">Last name</string>
    <string name="email" tools:ignore="MissingTranslation">Email</string>
    <string name="phone" tools:ignore="MissingTranslation">Phone</string>
    <string name="password" tools:ignore="MissingTranslation">Password</string>
    <string name="change_password" tools:ignore="MissingTranslation">Update Password</string>
    <string name="re_enternewpassword" tools:ignore="MissingTranslation">Re-enter new password</string>
    <string name="re_enterpassword" tools:ignore="MissingTranslation">Re-enter password</string>
    <string name="professional_details" tools:ignore="MissingTranslation">Professional details</string>
    <string name="job_title" tools:ignore="MissingTranslation">Job title</string>
    <string name="affiliation" tools:ignore="MissingTranslation">Affiliation</string>
    <string name="freelancer" tools:ignore="MissingTranslation">Freelancer</string>
    <string name="update" tools:ignore="MissingTranslation">Update</string>
    <string name="signoutdialog" tools:ignore="MissingTranslation">Are you sure you want to sign out?</string>
    <string name="countries" tools:ignore="MissingTranslation">Countries</string>
    <string name="create_account_header" tools:ignore="MissingTranslation">Create account</string>
    <string name="prodetails" tools:ignore="MissingTranslation">Step 1: Add Professional Details</string>
    <string name="username" tools:ignore="MissingTranslation">Username</string>
    <string name="re_email" tools:ignore="MissingTranslation">Re-enter email</string>
    <string name="gender" tools:ignore="MissingTranslation">Gender</string>
    <string name="male" tools:ignore="MissingTranslation">Male</string>
    <string name="female" tools:ignore="MissingTranslation">Female</string>
    <string name="other" tools:ignore="MissingTranslation">Other</string>
    <string name="choose" tools:ignore="MissingTranslation">Choose</string>
    <string name="select_country" tools:ignore="MissingTranslation">Select country</string>
    <string name="passhint" tools:ignore="MissingTranslation">(Minimum 8 characters)</string>
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="selectlanguage" tools:ignore="MissingTranslation">Select language</string>
    <string name="email_notmatch" tools:ignore="MissingTranslation">Email Address Does Not Match</string>
    <string name="createprivatecircle" tools:ignore="MissingTranslation">Step 2: Create a Private Circle</string>
    <string name="create_a_new_private" tools:ignore="MissingTranslation">Create a new Private Circle</string>
    <string name="new_circle" tools:ignore="MissingTranslation">New Circle</string>
    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="build_this_circle" tools:ignore="MissingTranslation">Build this Circle</string>
    <string name="done" tools:ignore="MissingTranslation">Done</string>
    <string name="termcondition" tools:ignore="MissingTranslation">Step 4: Accept Terms of Use</string>
    <string name="agree" tools:ignore="MissingTranslation">Agree to <b>Terms of Use</b></string>
    <string name="confirmemail" tools:ignore="MissingTranslation">Send registration confirmation email</string>
    <string name="completeaccount" tools:ignore="MissingTranslation">Complete account creation</string>
    <string name="textagree" tools:ignore="MissingTranslation">Agree</string>
    <string name="agree_tc" tools:ignore="MissingTranslation">Please Accept the <b>Terms of Use</b></string>
    <string name="gender_is_required" tools:ignore="MissingTranslation">Gender Is a Required Field</string>
    <string name="please_make_your" tools:ignore="MissingTranslation">Please Select Male, Female, or Other</string>
    <string name="app_unlocked" tools:ignore="MissingTranslation">Enter Your Password and App-Unlock Passcode to Unlock Reporta</string>
    <string name="enter_passcode" tools:ignore="MissingTranslation">Enter passcode</string>
    <string name="enter_your_location" tools:ignore="MissingTranslation">Enter your location</string>
    <string name="choose_options" tools:ignore="MissingTranslation">Choose Options</string>
    <string name="checkin_frequency" tools:ignore="MissingTranslation">Check-in frequency</string>
    <string name="edit_alert_msgs" tools:ignore="MissingTranslation">Edit alert messages</string>
    <string name="start_now" tools:ignore="MissingTranslation">Start now</string>
    <string name="start_later" tools:ignore="MissingTranslation">Start later</string>
    <string name="set_end_time" tools:ignore="MissingTranslation">Set end time</string>
    <string name="your_next_conf" tools:ignore="MissingTranslation">Your next confirmation is at:\u0020</string>
    <string name="confirm_now" tools:ignore="MissingTranslation">Confirm now</string>
    <string name="closenow" tools:ignore="MissingTranslation">Close</string>
    <string name="all_circle" tools:ignore="MissingTranslation">All Circles</string>
    <string name="all_contacts" tools:ignore="MissingTranslation">All Contacts</string>
    <string name="my_contacts" tools:ignore="MissingTranslation">My Contacts</string>
    <string name="save" tools:ignore="MissingTranslation">Save</string>
    <string name="private_circle" tools:ignore="MissingTranslation">Private Circles</string>
    <string name="add" tools:ignore="MissingTranslation">Add</string>
</resources>