<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:clickable="true"
              android:focusable="true"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="@dimen/margin_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_unlocked"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:hint="@string/enterpassword"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="25"/>

    <EditText
        android:id="@+id/edtPasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:hint="@string/enter_passcode"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:maxLength="6"/>

</LinearLayout>